k8s/templates/redcap/redcap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redcap
  namespace: redcap
  labels:
    app: redcap
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redcap
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: redcap
        tier: web
    spec:
      containers:
        - name: redcap-server
          image: gcr.io/<PROJECT_ID>/redcap:8.6.0
          command: ["/usr/sbin/apache2ctl", "-D", "FOREGROUND"]
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 1
          volumeMounts:
            - name: ssmtp-credentials
              mountPath: /etc/ssmtp/
              readOnly: true
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          lifecycle:
            postStart:
              exec:
                command:
                  - "sh"
                  - "-c"
                  - >
                    gcsfuse -o allow_other --dir-mode 777 --file-mode 777 redcap /mnt/redcap-bucket;
                    gcsfuse -o allow_other --dir-mode 777 --file-mode 777 redcap-temp /var/www/site/temp;
            preStop:
              exec:
                command:
                  - "sh"
                  - "-c"
                  - >
                    fusermount -u /mnt/redcap-bucket;
                    fusermount -u /var/www/site/temp;
      volumes:
        - name: ssmtp-credentials
          secret:
            secretName: ssmtp-credentials
