k8s/templates/redcap/redcap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redcap-backend
  labels:
    app: redcap
spec:
  type: NodePort
  selector:
    app: redcap
    tier: web
  ports:
  - port: 80
    targetPort: 80
  sessionAffinity: ClientIP
